terminator 0.92:
  * Lots of juicy bug fixes
  * Implement the Palette section of the Profile preferences

terminator 0.91:
  * Fix various stupid release bugs from 0.90

terminator 0.90:
  * Almost complete refactoring of the code. This almost
	   inevitably means some regressions, unfortunately, but
		 it brings serious internal improvements and some new
		 features.
  * Brand new preferences editor, including profiles and
	   layouts. The editor now saves to a config file.

terminator 0.14:
  * Major reworking of the grouping interface by Stephen
	   Boddy
  * Keybindings can now be disabled by setting them to "None"
  * Change default behaviour to enable full transparency
  * Terminal titlebars can now be edited like tab labels
  * Geometry hinting is now available and enabled by default
  * Lots of bug fixing

terminator 0.13:
  * Bug fixes
  * Added a shortcut key to make the window appear/disappear
	   (somewhat like a "Quake console" mode. Needs the deskbar
		  python bindings to work)
  * Update pot generation to use intltool-update
  * Allow users to permanently fix the title of a tab
  * Added command line option to specify working directory
  * Improve transparency support in composited desktops.
  * The tab bar can now be hidden and/or scrolled.
  * Add configurability of cursor colour and shape
  * Support various VoIP URIs
  * Add command line option to force a particular window title
  * Add a hotkey for spawning a new Terminator instance
	   (emulates a "new window" feature)
  * Ability to group by tab
  * SunOS support (via patch from Lewis Thompson)
  * Silly notify-osd message on exit (suggested by pitti)
  * Drag and drop icon is now a scaled terminal image

terminator 0.12:
  * Bug fixes
  * Simultaneous typing support
  * Directional terminal navigation
  * Improved search UI
  * Graphical Profile Editor
  * Bug numbers for launchpad.net are now URLs

terminator 0.11:
  * Bug fixes
  * X session support

terminator 0.10: