@@ -1,3 +1,6 @@
+terminator UNRELEASED:
+  * Add preferences support for alternate_screen_scroll (LP: #558832).
+
 terminator 0.92:
   * Lots of juicy bug fixes
   * Implement the Palette section of the Profile preferences
